--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1"
   },
