--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "next": "^15.2.2",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
